--- a/wp-content/themes/kma-slim/sass/variables.sass
+++ b/wp-content/themes/kma-slim/sass/variables.sass
@@ -37,6 +37,7 @@ $body-family: $font-family-sans
 $body-size: 14px
 $body-weight: $weight-normal
 $body-line-height: 2em
+$content-heading-line-height: 1.5em
 
 $weight-light: 300
 $weight-normal: 400
