--- a/wp-content/themes/kma-slim/sass/style.scss
+++ b/wp-content/themes/kma-slim/sass/style.scss
@@ -28,3 +28,6 @@ License URI:        http://opensource.org/licenses/MIT
 
 // Theme
 @import "theme.scss";
+
+// Woocommerce
+@import "woocommerce.scss";
