--- a/wp-content/themes/kma-slim/sass/woocommerce.scss
+++ b/wp-content/themes/kma-slim/sass/woocommerce.scss
@@ -18,27 +18,24 @@
     padding: 0 0 0 4px;
   }
   .flex-viewport {
-    padding: .5rem;
+    margin: .5rem;
+    border: 1px solid #CCC;
   }
-  .woocommerce-product-gallery__wrapper {
-    .woocommerce-product-gallery__image.flex-active-slide {
-      border: 1px solid $grey;
-    }
-  }
+
   .flex-control-nav {
     list-style-type: none;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     margin: 0;
-    padding: .5rem 0;
+    padding: 0;
 
     li {
       padding: .5rem;
       margin: 0;
 
       img {
-        border: 1px solid $grey;
+        border: 1px solid #CCC;
       }
     }
   }
