--- a/wp-content/themes/kma-slim/sass/variables.sass
+++ b/wp-content/themes/kma-slim/sass/variables.sass
@@ -19,7 +19,8 @@ $turquoise: hsl(171, 100%, 41%)
 $cyan: hsl(204, 86%, 53%)
 $blue: hsl(217, 71%, 53%)
 $purple: hsl(271, 100%, 71%)
-$red: hsl(348, 100%, 61%)
+$red: #f96854
+$lightred: rgba(249,104,84,.2)
 
 //Custom Colors
 $primary: #38b447
