--- a/wp-content/themes/kma-slim/sass/woocommerce.scss
+++ b/wp-content/themes/kma-slim/sass/woocommerce.scss
@@ -1,6 +1,22 @@
-//Single Product Page
+//Global
+.select2-container--default .select2-selection--single {
+  background-color: #fff;
+  border: 1px solid #dbdbdb;
+  border-radius: 0;
+  padding-bottom: calc(0.375em - 1px);
+  padding-left: calc(0.625em - 1px);
+  padding-right: calc(0.625em - 1px);
+  padding-top: calc(0.375em - 1px);
+  height: 2.25rem;
+  margin-bottom: .1rem;
+  box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
+}
 
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  line-height: 1.6em;
+}
 
+// Single Product Page
 .woocommerce-product-gallery {
   .woocommerce-product-gallery__trigger {
     float: right;
@@ -86,5 +102,66 @@
 
 }
 
+//Cart Page
 
+//Checkout Page
+.wpmc-tabs-wrapper {
+  max-width: none;
+  padding: 1.5rem 1.25rem;
 
+  .wpmc-tabs-list {
+    padding: 0;
+    margin: 0;
+    display: flex;
+    background: transparent;
+    justify-content: center;
+    align-items: center;
+
+    .wpmc-tab-item{
+      padding: 0 !important;
+      margin: 0 !important;
+    }
+  }
+}
+#order_comments {
+  min-height: 120px;
+}
+
+.woocommerce-NoticeGroup.woocommerce-NoticeGroup-checkout {
+  background: $lightred;
+  border: 1px solid $red;
+  padding: 1rem;
+  margin-bottom: 2rem;
+
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.woocommerce form {
+
+  .form-row-first,
+  .form-row-last {
+    float: none;
+    width: 100%;
+    overflow: visible;
+  }
+
+  @media screen and (min-width: $desktop) {
+    .form-row-first,
+    .form-row-last {
+      width: 47%;
+      overflow: visible;
+    }
+
+    .form-row-first {
+      float: left;
+    }
+
+    .form-row-last {
+      float: right;
+    }
+  }
+
+}
