--- a/wp-content/themes/kma-slim/sass/theme.scss
+++ b/wp-content/themes/kma-slim/sass/theme.scss
@@ -614,10 +614,15 @@ body {
     }
   }
 
-  h4 {
+  h4,
+  h4 a {
     font-size: 22px;
     font-weight: $weight-bold;
     text-transform: uppercase;
+  }
+
+  h4 {
+    margin-bottom: 1rem;
   }
 
   h5 {
