--- a/wp-content/themes/kma-slim/sass/woocommerce.scss
+++ b/wp-content/themes/kma-slim/sass/woocommerce.scss
@@ -165,3 +165,15 @@
   }
 
 }
+
+//Thank You
+.message.is-primary {
+  background-color: #f7fdf8;
+  padding: 1rem;
+  border: 1px solid $primary;
+
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+}
