--- a/wp-content/themes/kma-slim/sass/woocommerce.scss
+++ b/wp-content/themes/kma-slim/sass/woocommerce.scss
@@ -169,12 +169,12 @@
 //Payment
 .woocommerce-checkout-payment {
   .wc_payment_methods {
-    list-style: none;
-    padding: 1rem 0;
-    margin: 0;
+    list-style: none !important;
+    padding: 1rem 0!important;
+    margin: 0 !important;
     li {
-      list-style: none;
-      margin: 0;
+      list-style: none !important;
+      margin: 0 !important;
       padding: 1rem !important;
       border: 1px solid #ccc;
     }
