--- a/wp-content/themes/kma-slim/sass/woocommerce.scss
+++ b/wp-content/themes/kma-slim/sass/woocommerce.scss
@@ -60,8 +60,8 @@
 .entry-summary {
 
 
-  .title, .subtitle {
-    text-align: right;
+  p.title, p.subtitle {
+    text-align: right !important;
   }
 
   form.cart {
