--- a/wp-content/themes/kma-slim/sass/theme.scss
+++ b/wp-content/themes/kma-slim/sass/theme.scss
@@ -334,7 +334,7 @@ body {
       max-width: 200px;
     }
     .top-two {
-      background-color: #F2F2F0;
+      background-color: #fafafa;
     }
   }
 }
