--- a/wp-content/themes/kma-slim/sass/helpers.scss
+++ b/wp-content/themes/kma-slim/sass/helpers.scss
@@ -26,6 +26,36 @@
   order: 3;
 }
 
+figure.video {
+  position: relative;
+  overflow: hidden;
+
+  iframe {
+    width: 100%;
+    height:100%;
+  }
+  &.has-shadow {
+    box-shadow: 0 0 10px rgba(0,0,0,.5);
+  }
+  &.has-border {
+    border: 2px solid #FFF;
+    border-radius: 1rem;
+  }
+  &.is-16by9 {
+    height: 0;
+    padding-bottom: 55%;
+
+    .embed-wrapper {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+    }
+
+  }
+}
+
 .is-first-tablet {
   @media screen and (min-width: $tablet) {
     order: 1;
