--- a/wp-content/themes/kma-slim/sass/helpers.scss
+++ b/wp-content/themes/kma-slim/sass/helpers.scss
@@ -1,6 +1,10 @@
 .pad-anchor {
   position: absolute;
   margin-top: -180px;
+
+  @supports (-ms-ime-align:auto) {
+    padding-bottom: 140px;
+  }
 }
 
 .font-black {
