--- a/wp-content/themes/kma-slim/sass/woocommerce.scss
+++ b/wp-content/themes/kma-slim/sass/woocommerce.scss
@@ -102,6 +102,44 @@
 
 }
 
+//Shop page
+#mid {
+  
+  ul.products {
+    margin: 0 -1.5rem;
+
+    li.product {
+      list-style: none;
+      padding: 1.5rem;
+      margin: .5rem 0;
+      width: auto;
+
+      img {
+        border: 1px solid #ddd;
+      }
+
+      .button.add_to_cart_button {
+        display: block;
+        background-color: $info;
+        color: #FFF;
+      }
+
+      .woocommerce-loop-product__title {
+        font-size: 1.4em;
+        margin: 0;
+        padding: 0;
+      }
+    }
+  }
+
+  .woocommerce-ordering {
+    .orderby {
+      padding: .5rem 1rem .5rem .5rem;
+      border: 1px solid #ddd;
+    }
+  }
+}
+
 //Cart Page
 
 //Checkout Page
