--- a/wp-content/themes/kma-slim/sass/woocommerce.scss
+++ b/wp-content/themes/kma-slim/sass/woocommerce.scss
@@ -62,6 +62,13 @@
 
   p.title, p.subtitle {
     text-align: right !important;
+
+    del {
+      color: red;
+      display: inline-block;
+      padding: 0 5px;
+      font-size:.9em;
+    }
   }
 
   form.cart {
