--- a/wp-content/themes/kma-slim/sass/woocommerce.scss
+++ b/wp-content/themes/kma-slim/sass/woocommerce.scss
@@ -69,6 +69,10 @@
       padding: 0 5px;
       font-size:.9em;
     }
+
+    ins {
+      text-decoration: none;
+    }
   }
 
   form.cart {
@@ -137,7 +141,31 @@
         margin: 0;
         padding: 0;
       }
+
+      .price {
+        del span {
+          color: red;
+          text-decoration: line-through !important;
+          display: inline-block;
+          padding: 0 5px;
+          font-size: .9em;
+        }
+
+        ins {
+          text-decoration: none;
+        }
+      }
     }
+  }
+
+  .onsale {
+    float: right;
+    display: inline-block;
+    padding: 0 10px;
+    background-color: $primary;
+    color: #FFF;
+    position: absolute;
+    right: 0;
   }
 
   .related, .upsells {
@@ -162,6 +190,18 @@
           font-size: 1.2em;
           display: inline-block;
           padding: .5rem 0;
+
+          del {
+            color: red;
+            text-decoration: line-through !important;
+            display: inline-block;
+            padding: 0 5px;
+            font-size: .9em;
+          }
+  
+          ins {
+            text-decoration: none;
+          }
         }
       }
     }
