--- a/wp-content/themes/kma-slim/sass/woocommerce.scss
+++ b/wp-content/themes/kma-slim/sass/woocommerce.scss
@@ -315,4 +315,8 @@
   }
 }
 
-
+#wc-stripe-payment-request-button-separator {
+  display: none !important;
+  visibility: hidden !important;
+  color:rgba(255,255,255,0) !important;
+}
