--- a/wp-content/themes/kma-slim/sass/woocommerce.scss
+++ b/wp-content/themes/kma-slim/sass/woocommerce.scss
@@ -199,7 +199,7 @@
           margin: 0 1rem 0 0;
         }
 
-        .spcial-image {
+        img.spcial-image {
           position: absolute;
           left: 27px;
           border: none;
