--- a/wp-content/themes/kma-slim/sass/theme.scss
+++ b/wp-content/themes/kma-slim/sass/theme.scss
@@ -15,6 +15,12 @@ body {
   display: flex;
   flex-direction: column;
 
+  .pad-anchor::before {
+    content: " ";
+    position: absolute;
+    margin-top: -100px;
+  }
+
   #MobileNavMenu {
     width: 100%;
     min-height: 100vh;
